# KT3

./: README.md  docker-compose.yaml
api/: Dockerfile  main.py  pyproject.toml
api/api/: router.py
api/api/routes/: account_groups.py  accounts.py  analytics.py  entries.py
api/business_logic/: analytics.py
api/core/: config.py
api/db/: sessions.py
api/db/repositories/: account_groups.py  accounts.py  entries.py
api/db/tables/: account_groups.py  accounts.py  base_class.py  entries.py
api/schemas/: account_groups.py  accounts.py  entries.py
app/: Dockerfile  README.md  package-lock.json  package.json
app/app/: globals.css
app/app/(dashboard)/: layout.js  page.js
app/app/(dashboard)/account-groups/: page.js
app/app/(dashboard)/account-groups/create/: page.js
app/app/(dashboard)/accounts/: page.js
app/app/(dashboard)/accounts/create/: page.js
app/app/(dashboard)/entries/: page.js
app/app/(dashboard)/entries/create/: page.js
app/app/components/: AccountForm.js  AccountGroupForm.js  BarChart.js  BasicTable.js  Breadcrumb.js  EntryForm.js  MainTitle.js  PieChart.js  Sidebar.js
app/app/pages/api/: revalidate.js
app/app/utils/: fetchData.js
liquibase/: Dockerfile
liquibase/db/: liquibase.docker.properties
liquibase/db/changelog/: changelog.sql
